Tristen Thompson, Create Band section

--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     </head>
     <body>
         <h1>Tristen Thompson</h1>
+        <h2>Tally Hall</h2>
+        <p>
+            I found Tally Hall when I was in my Junior year of high school through their track "Banana Man" in their first album <i>Marvin's Marvelous Mechanical Museum</i>. "Banana Man" carried two aspects that I would go on to enjoy in Tall Hall's work, namely different sections of each song falling under different genres and image provoking lyrics.
+            I loved listening to many of their tracks on their first album, particular favorites are "The Bidding", "Spring and a Storm", and perhaps their most famous song, "Ruler of Everything." Their next album, <i>Good and Evil</i> carried the same elements that I enjoyed from their first album with a slightly darker and ominous feel. It was after I listened to that album that I found out that <b>Tally Hall had disbanded in 2011</b>, nearly 10 years before I discovered them.
+            Although most members went down different paths away from music after disbanding, Joe Hawley would continue to write music and would go on to create a new album, <i>Hawaii: Part ii</i> featuring the members of the band the following year after their break up.
+            Tally Hall has since <b>wormed</b> its way into the background of many car drives and homework sessions after I first heard "Banana Man" and still makes appearances on occasion in my life.
+        </p>
     </body>
 </html>
