Tristen Thompson, Create Sandwich Section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,48 @@
     </head>
     <body>
         <h1>Tristen Thompson</h1>
-        <h2>Tally Hall</h2>
+        <h3>Tally Hall</h3>
         <p>
             I found Tally Hall when I was in my Junior year of high school through their track "Banana Man" in their first album <i>Marvin's Marvelous Mechanical Museum</i>. "Banana Man" carried two aspects that I would go on to enjoy in Tall Hall's work, namely different sections of each song falling under different genres and image provoking lyrics.
-            I loved listening to many of their tracks on their first album, particular favorites are "The Bidding", "Spring and a Storm", and perhaps their most famous song, "Ruler of Everything." Their next album, <i>Good and Evil</i> carried the same elements that I enjoyed from their first album with a slightly darker and ominous feel. It was after I listened to that album that I found out that <b>Tally Hall had disbanded in 2011</b>, nearly 10 years before I discovered them.
+            I loved listening to many of their tracks on their first album, particular favorites are "The Bidding", "Spring and a Storm", and perhaps their most famous song, "Ruler of Everything." Their next album, <i>Good and Evil</i> carried the same elements that I enjoyed from their first album with a slightly darker and ominous feel. 
+            It was after I listened to that album that I found out that <b>Tally Hall had disbanded in 2011</b>, nearly 10 years before I discovered them.
             Although most members went down different paths away from music after disbanding, Joe Hawley would continue to write music and would go on to create a new album, <i>Hawaii: Part ii</i> featuring the members of the band the following year after their break up.
             Tally Hall has since <b>wormed</b> its way into the background of many car drives and homework sessions after I first heard "Banana Man" and still makes appearances on occasion in my life.
         </p>
+        <hr>
+        <h3>Turkey BLT</h3>
+        <ol>
+            <li>Obtain</li>
+            <ul>
+                <li>Deli Turkey Meat</li>
+                <li>Mayo</li>
+                <li>Pepper Jack Cheese</li>
+                <li>Bread of Choice</li>
+                <li>Bacon</li>
+                <li>Slicer Tomatoes</li>
+                <li>Romaine Lettuce</li>
+            </ul>
+            <li>Prepare Bacon</li>
+            <ol>
+                <li>Set oven to 400 degrees fahrenheit, as oven baked bacon is the best bacon</li>
+                <li>Place bacon on baking sheet and slide into oven for roughly 11 min</li>
+                <li>Prepare a plate with two sections of paper towels to soak up grease, one on the plate and the other to place on top of bacon</li>
+                <li>After 11 min, take the baking sheet out of the oven and begin placing cooked bacon onto prepared plate</li>
+                <li>Once all bacon is on the plate, start patting down the bacon with the second section of paper towl to remove grease</li>
+            </ol>
+            <li>Slice Tomatoes to desired thickness and set aside</li>
+            <li>Tear lettuce into desired length to cover bread of choice</li>
+            <li>Assemble Sandwich</li>
+                <ol>
+                    <li>Place two slices of bread onto counter</li>
+                    <li>Spread mayo onto each slice face-up</li>
+                    <li>Place 3 Turkey slices onto one slice of bread</li>
+                    <li>Place 1 slice of pepper jack cheese onto turkey</li>
+                    <li>Put torn lettuce on top of cheese</li>
+                    <li>Lay tomatoe slice on to other slice of bread</li>
+                    <li>Join the pieces of bread together with the filling in the middle</li>
+                </ol>
+            <li>Enjoy</li>
+        </ol>
     </body>
 </html>
