Tristen Thompson, Add bands after making list

--- a/index.html
+++ b/index.html
@@ -48,5 +48,17 @@
                 </ol>
             <li>Enjoy</li>
         </ol>
+        <ul>
+            <li>Franz Ferdinand</li>
+            <ul>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Glasgow</li>
+                <li>New York</li>
+                <li>Paris</li>
+            </ull>
+            <li>Bug Hunter</li>
+            <li>Ruen Brothers</li>
+        </ul>
     </body>
 </html>
