Add links to image in myLocation and to myLocation in index

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
             <li>Bug Hunter</li>
             <li>Ruen Brothers</li>
         </ul>
+    <a href="C:\Classwork\Web dev\webapps-repos\webapps-f26-assignment3-Forraclass\myLocation.html" >Mylocation</a>
     </body>
 </html>
