--- a/myLocation.html
+++ b/myLocation.html
@@ -10,6 +10,6 @@
              The river funnels through a lake that has been the background to many memories of fishing with my family, as well as the subsequent fish frys on its banks. 
              Some of my most comforting memories were made there and I enjoy my visits when I can make them.
         </p>
-        <img src=C:\Classwork\Web dev\River.jpeg alt="River">
+        <img src="C:\Classwork\Web dev\webapps-repos\webapps-f26-assignment3-Forraclass\River.jpg" height="400" width="300" alt="River"> 
     </body>
 </html>
