Tristen Thompson, add places to visit section to myLocation

--- a/myLocation.html
+++ b/myLocation.html
@@ -11,5 +11,40 @@
              Some of my most comforting memories were made there and I enjoy my visits when I can make them.
         </p>
         <img src="C:\Classwork\Web dev\webapps-repos\webapps-f26-assignment3-Forraclass\River.jpg" height="400" width="300" alt="River"> 
-    </body>
+    <hr>
+    <h1>Places I want to visit</h1>
+    <p>There are a few places that I want to travel to. Personally, I have never left the United States before and would like to change that. Ideally, I would want to visit the Switzerland, Rome, England, and Cario.</p>
+    <table>
+        <tr>
+            <th>Place</th>
+            <th>Itinerary</th>
+            <th>Distance</th>
+            <th>Cost</th>
+            </tr>
+        <tr>
+            <td>Switzerland</td>
+            <td>Kunstmuseum St.Gallen, Jungfrau railway, chocolate</td>
+            <td>4,950 miles</td>
+            <td>$2,100/per week</td>
+        </tr>
+        <tr>
+            <td>Rome</td>
+            <td>Pantheon, Palazzo Colonna, Sistine Chapel</td>
+            <td>5,225 miles</td>
+            <td>$2,800/per week</td>
+        </tr>
+        <tr>
+            <td>England</td>
+            <td>The British Museum, Arthur's Seat, Windsor Castle</td>
+            <td>4,300 miles</td>
+            <td>$2,900/per week</td>
+        </tr>
+        <tr>
+            <td>Cario</td>
+            <td>The Egyptian Museum, Citadel of Saladin, Cave Church</td>
+            <td>6,500 miles</td>
+            <td>$1,500/per week</td>
+        </tr>
+    </table>
+</body>
 </html>
