--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li>Bug Hunter</li>
             <li>Ruen Brothers</li>
         </ul>
-    <a href="C:\Classwork\Web dev\webapps-repos\webapps-f26-assignment3-Forraclass\myLocation.html" >Mylocation</a>
+    <a href="https://github.com/44-563-Web-Apps-S26/webapps-f26-assignment3-Forraclass/blob/main/myLocation.html" >Mylocation</a>
     <hr>
     <h1>Code Snippet Explination: How to do Logging in Python</h1>
     <p>
